--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   "homepage": "https://github.com/bh-replate-1/backend#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "helmet": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.5",
     "sqlite3": "^5.0.0"
