--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is for web22 students",
   "main": "index.js",
   "scripts": {
-    "test": "cross-env NODE_ENV=development jest --watch",
+    "test": "cross-env DB_ENV=testing jest --watch",
     "start": "node index.js"
   },
   "repository": {
